--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html width=100%>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    meta name="robots" content="noindex, nofollow" />
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+<meta url='Testing/Login-System.html' http-equiv="Refresh" name="robots" content="noindex, follow" />
