--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta url='Testing/Login-System.html' http-equiv="Refresh" name="robots" content="noindex, follow" />
+<meta url='Login-System.html' http-equiv="Refresh" name="robots" content="noindex, follow" />
